[workspace]
resolver = "2"
members = [
  "ffrelay",
  "ffrelay-api",
]

[workspace.package]
version = "0.0.2"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bon = "3.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
log = "0.4"
reqwest = { version = "0.13", default-features = false, features = [
  "form",
  "json",
  "rustls"
] }
rstaples = "0.3"
serde = "1.0"
serde_json = "1.0"
tabled = "0.20"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
